tests/fixtures/wyst/wync/tests/fixtures/syntax-corpus/negative/unshadowable-local-binding.wyst
module demo
fn main() { var widen: u64 = 0 }
